Add a test for nativeTextPageGetRects, Found and fixed some issues with Kover and useJacoco, that turns out to a general misconfiguration that was messy up Kover with or without useJacoco